--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>Gh-pages</title>
+  <title>Brendans Website</title>
   <meta name="description" content="Public HTML">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -22,7 +22,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Gh-pages</h1>
+      <h1 class="title">Welcome!</h1>
     </header>
     <div id="container">
       <p class="tagline">Public HTML</p>
