--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is Heading 1</h3>
 
-<p>  </p>
+<p> Paragraph Here  </p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>More Content Here</h3>
