--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
@@ -13,7 +11,6 @@
 
   <title>Brendans Website</title>
   <meta name="description" content="Public HTML">
-
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
@@ -22,19 +19,12 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Welcome!</h1>
+      <h1 class="title">Welcome to Brendan's Website</h1>
     </header>
     <div id="container">
-      <p class="tagline">Public HTML</p>
+      <p class="tagline">Willowdale Productions</p>
+      
       <div id="main" role="main">
-        <div class="download-bar">
-
-<div class="inner">
-          <a href="https://github.com/B-github/gh-pages/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/B-github/gh-pages/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/B-github/gh-pages" class="code">View Gh-pages on GitHub</a>
-</div>
-        
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
