--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <div id="container">
       <p class="tagline">Willowdale Productions</p>
       
+       <div class="download-bar">
+
+<div class="inner">
+          <a href="https://github.com/B-github/gh-pages/tarball/master" class="download-button tar"><span>Download</span></a>
+
+          <a href="https://github.com/B-github/gh-pages/zipball/master" class="download-button zip"><span>Download</span></a>
+
+          <a href="https://github.com/B-github/gh-pages" class="code">View Gh-pages on GitHub</a>
+</div>
+      
       <div id="main" role="main">
         <span class="blc"></span><span class="trc"></span>
         </div>
